Fix spacing on dog items

--- a/app/assets/stylesheets/components/_splash_dog_preview_item.scss
+++ b/app/assets/stylesheets/components/_splash_dog_preview_item.scss
@@ -45,6 +45,8 @@ $yelp-orange: #f15c00;
 
   .splash-dog-preview-stars {
     display: flex;
+    align-items: center;
+    margin: 10px 0;
 
 
     div {
